--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {@apply text-7xl font-medium}
+    h2 {@apply text-2xl}
+    h3 {@apply text-xl font-medium}
+}
